stylesheets/style.css
footer {
  background-color: #222222;
  width: 100%;
  height: 40px;
  position: fixed;
  bottom: 0;
  left: 0;
  color: white;
  padding-top: 10px;
  font-weight: bold;
}
footer a {
  margin-right: 15px;
}
.skills-section img, .about-section img {
  display: block;
  margin: auto;
}
.skills-section p {
  margin-bottom: 30px !important;
  font-family: 'Proximanova-Regular';
  font-weight: 200;
}

.home-section {
  width: 100%;
  height: calc(100vh - 40px);
  background:  url(../assets/images/laptopbg.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  display: table;
  color: #fff;
  font-weight: bold;
  font-family: 'Arvo', serif !important;
}
.home-section-container {
  display: table-cell;
  vertical-align: middle;
}
section {
  width: 100%;
  min-height: calc(100vh - 40px); 
}
.section-title {
  text-align: center;
  margin-bottom: 25px !important;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600 !important;
}
.skills-image-wrapper {
  height: 100px;
}
.e-section p, .projects-section .card {
  font-family: Proximanova-Regular;
}
.about-section p {
  font-size: 18px;
  font-family: 'Proximanova-Regular';
}
.e-section {
  padding-bottom: 150px;
}

